Multi-Input socket activation zone error with lots of inputs #87170

Closed
opened 2021-04-03 18:30:33 +02:00 by Erindale · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-02 21:26, hash: 321eef6a0c
Worked: (newest version of Blender that worked as expected)

Short description of error
The more inputs the socket has, the larger the deadzone at each end. This makes it hard to join things but also disconnect things. It makes it basically impossible to clean the noodles up as well as you can't reorder connections at the top and bottom other than by connecting in order to they get pushed down intentionally.

Exact steps for others to reproduce the error
Create a Join Geometry node with lots of inputs (attached file) and try to connect or disconnect a noodle from the start or end of the stack.

2021-04-03 17-21-10.mp4

join socket bug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-02 21:26, hash: `321eef6a0c` Worked: (newest version of Blender that worked as expected) **Short description of error** The more inputs the socket has, the larger the deadzone at each end. This makes it hard to join things but also disconnect things. It makes it basically impossible to clean the noodles up as well as you can't reorder connections at the top and bottom other than by connecting in order to they get pushed down intentionally. **Exact steps for others to reproduce the error** Create a Join Geometry node with lots of inputs (attached file) and try to connect or disconnect a noodle from the start or end of the stack. [2021-04-03 17-21-10.mp4](https://archive.blender.org/developer/F9919050/2021-04-03_17-21-10.mp4) [join socket bug.blend](https://archive.blender.org/developer/F9919049/join_socket_bug.blend)
Author

Added subscriber: @Erindale

Added subscriber: @Erindale
Member
Added subscribers: @wannes.malfait, @FabianSchempp, @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Maybe @FabianSchempp or @wannes.malfait want to fix this?

Maybe @FabianSchempp or @wannes.malfait want to fix this?
Fabian Schempp self-assigned this 2021-04-19 23:59:48 +02:00

This issue was referenced by c204e0c385

This issue was referenced by c204e0c385313570d63c12c2424601ffe53cbe3a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by db3b610040

This issue was referenced by db3b6100404219e2a02e8163e511e604ee137828
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87170
No description provided.