Fix T87170 Multi-Input socket activation zone error with lots of inputs

Calculation of bounding rect for multi-input socket was wrong.

Reviewer: Hans Goudey (HooglyBoogly)

Differential Revision: https://developer.blender.org/D11077